# SuperSLAM

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.tensorrt10  Dockerfile.tensorrt11  INSTALL.md  Makefile  PLOTS.md  README.md  build.sh  build_dependencies.sh  build_deps.sh  build_engines.cpp  build_ros.sh  build_superslam.sh  build_tenrorrt_engines.sh  build_thirdparty.sh  build_vocabulary_tool.sh  cSpell.json  compose.yaml  inference_image.cpp  inference_sequence.cpp  install_dependencies.sh  install_dependencies_ubuntu2204.sh  rebuild_engines.sh  setup.sh  superslam-dictionary.txt  test_debug_matching.cc  test_example_simple  test_example_simple.cc  test_simple_visualization.cc  test_superpoint_cosine_matching.cc  test_superpoint_only.cc
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit.yml
config/: config.yaml
convert2onnx/: convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  superglue.py  superpoint.py
examples/: example_common.h
examples/RGB-D/: rgbd_rerun.cc  rgbd_tum.cc
examples/ROS/SuperSLAM/: CMakeLists.txt  manifest.xml
examples/ROS/SuperSLAM/src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
examples/ROS/SuperSLAM/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
examples/monocular/: EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  TUM1.yaml  mono_euroc.cc  mono_kitti.cc  mono_kitti_rerun.cc  mono_rerun.cc  mono_tum.cc  mono_tum_rerun.cc  new_mono_tum.cc
examples/rgbd/: TUM1.yaml  TUM2.yaml  TUM3.yaml  tum.cc
examples/stereo/: EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  TartanAir.yaml  benchmark.cc  euroc.cc  kitti.cc  stereo_euroc.cc  stereo_euroc_rerun.cc  stereo_kitti.cc  stereo_kitti_no_viewer.cc  stereo_kitti_rerun.cc  tartan.cc
include/: Converter.h  DescriptorGather.h  DescriptorPool.h  EigenPlaces.h  Frame.h  FrameDrawer.h  FrameTracker.h  GlobalPoseGraph.h  InferenceInterfaces.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  KeyframeDatabase.h  KeyframeGate.h  LightGlue.h  LocalMapping.h  Logging.h  LoopCloser.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBExtractor.h  ORBMatcher.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PlaceRecognizer.h  PnPsolver.h  PoseOptimizationFactors.h  Profiling.h  ReadConfig.h  RerunViewer.h  RgbdFrontEnd.h  SPBowVector.h  SPExtractor.h  SPLoopClosing.h  SPMatcher.h  SPVocabulary.h  (+22 more)
ros/ORB_SLAM2/src/AR/: ViewerAR.h  ros_mono_ar.cc
ros/SuperSLAM/: CMakeLists.txt
ros/SuperSLAM/src/: ros_mono.cc
ros/SuperSLAM/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
scripts/: rebuild_engines.sh
scripts/benchmarks/: _eval_common.py  evaluate_euroc.py  evaluate_kitti.py  evaluate_tartan.py  evaluate_tum.py
scripts/datasets/: _common.py  download_euroc.py  download_kitti.py  download_tartanair.py  download_tartanground.py  download_tum.py
scripts/models/: _release.py  download_onnx_engine_eigenplaces.py  download_onnx_engine_lightglue.py  download_onnx_engine_superpoint.py  download_weights_eigenplaces.py  download_weights_lightglue.py  download_weights_superpoint.py
scripts/setup/: install_dependencies.sh
scripts/test/: test.sh
src/: Converter.cc  DescriptorGather.cu  DescriptorPool.cc  EigenPlaces.cc  Frame.cc  FrameDrawer.cc  FrameTracker.cc  GlobalPoseGraph.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  KeyframeDatabase.cc  LightGlue.cc  LocalMapping.cc  Logging.cpp  LoopCloser.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  PlaceRecognizer.cc  PnPsolver.cc  Random.cpp  RerunViewer.cc  RgbdFrontEnd.cc  SPBowVector.cc  SPExtractor.cc  SPMatcher.cc  SPextractor.cc  SPmatcher.cc  Sim3Solver.cc  SparseMap.cc  StereoFrame.cc  StereoFrontEnd.cc  SuperGlue.cpp  SuperGlueTRT.cc  SuperPoint.cc  SuperPointLT.cc  SuperPointLibTorch.cc  (+11 more)
tests/: test_descriptor_pool.cc  test_frame_tracker.cc  test_global_pose_graph.cc  test_keyframe_database.cc  test_keyframe_gate.cc  test_loop_closer.cc  test_place_recognizer.cc  test_pose_optimization_factors.cc  test_sparse_map.cc  test_stereo_frame.cc  test_stereo_frontend.cc  test_superpoint_cosine_matching.cc  test_superpoint_only.cc  test_vo_convention.cc  test_vo_loop_closure.cc  test_window_smoother.cc
tools/: generate_sp_vocabulary.cc
utils/: config.yaml  convert_eigenplaces_to_onnx.py  convert_lightglue_to_onnx.py  convert_superpoint_to_onnx.py  export_safetensors.py  make_dynamic_batch_onnx.py
utils/convert2onnx/: convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  superpoint.py
weights/: superpoint_v1_sim_int32.engine
weights/backup_20250531_161207/: superpoint_v1_sim_int32.engine
